Kubernetes/hlc-kub-t9-letschat-jpo/letschat-srv.yml
apiVersion: v1
kind: Service
metadata:
    name: lets-chat
spec:
    type: NodePort
    ports:
    - name: service-http
      port: 8080
      targetPort: http
    selector:
        app: lets-chat
