Kubernetes/hlc-kub-t9-letschat-jpo/mongodb-srv.yml
apiVersion: v1
kind: Service
metadata:
  name: mongo
spec:
  type: ClusterIP
  ports:
  - port: 27017
    targetPort: mongo-server
  selector:
    app: mongo
