Kubernetes/hlc-kub-t9-letschat-jpo/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lets-chat-ingress
spec:
  rules:
  - host: www.chat-pepe.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: lets-chat
            port:
              number: 8080
